[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graphld"
version = "1.1.0"
description = "Graph-based linkage disequilibrium matrix estimation"
readme = "README.md"
requires-python = ">=3.11.0"
authors = [
    { name = "Luke O'Connor" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=2.2",
    "polars>=1.31.0",
    "scipy>=1.13",
    "scikit-sparse>=0.4.12",
    "h5py>=3.13.0",
    "filelock>=3.18.0",
    "click>=8.2.1",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.1",
    "ruff>=0.1.9",
    "hypothesis>=6.82.6",
    "psutil>=6.1.1",
    "tabulate>=0.9.0",
]

[project.urls]
Repository = "https://github.com/oclb/graphld"

[project.scripts]
graphld = "graphld.cli:main"
estest = "score_test.cli:main"
create-geneset-annot = "score_test.genesets:create_variant_annot"

[tool.setuptools]
packages = {find = {where = ["src"]}}

[tool.pytest.ini_options]
minversion = "7.4.0"
addopts = "-ra -q --cov=graphld --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/graphld", "src/score_test"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]


[tool.uv]
package = true
